fixes bug 223811 "getaddrinfo returns 3 addrinfo structs for each IP address [was: very long timeout for retrying IPv6 to IPv4 addresses]" r=wtc